package softdev.Part3_interface.demo;


import javax.swing.*;
import java.awt.*;

public class Moonicon implements Icon {
    @Override
    public void paintIcon(Component c, Graphics g, int x, int y) {

    }

    @Override
    public int getIconWidth() {
        return 0;
    }

    @Override
    public int getIconHeight() {
        return 0;
    }
}
